# friendly-chainsaw

./: .gitignore  MIGRATION_MAP.md  MODEL_STRATEGY.md  PHASE7_HANDOFF.md  PLAN.md  README.md  package-lock.json  package.json  renderer.html  thumbnails.html  vite.config.ts  worklog.md
.github/workflows/: ci.yml
docs/: AR_ASSET_BUILDER.md  BENCHMARK_1080P50.md  PHASE10_1_DESIGN.md  PHASE10_2_DESIGN.md  PHASE10_DESIGN.md  PHASE7_DESIGN.md  PHASE8_DESIGN.md  PHASE9_DESIGN.md  REALISM_PIPELINE.md  SPORTS_AR_MODELS.md  UI_VISUAL_SPEC.md  ar-election-vertical-slice.md  ar-implementation-progress.md  ar-replacement-plan.md  ar-system-audit.md  ar-target-architecture.md  broadcast-integration.md
legacy/: .gitignore  package.json
legacy/src/app/: page.tsx
legacy/src/lib/: studio-store.ts
scripts/: capture-sports-ar-thumbnails.mjs  cdp-console.ts  cdp-eval.ts  cdp-stack.ts  check-db-load.ts  dump-panel01-persistence.ts  ensure-dev-server.mjs  generate-sports-ar-assets.ts  kill-dev.ps1  restart-dev.ps1  verify-ar-asset-builder.ts  verify-ar-election-slice.ts  verify-phase10.ts  verify-phase10_1.ts  verify-phase10_2.ts  verify-phase3.ts  verify-phase5.ts  verify-phase7.ts  verify-phase8.ts  verify-phase9.ts  verify-sports-ar-models.ts  verify-studio-realism.ts
src/: App.tsx  index.css  main.tsx  renderer.tsx  thumbnailHarness.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: control-room.json  default.json
src-tauri/src/: capture.rs  control_server.rs  lib.rs  main.rs  mos.rs  ndi.rs  record.rs  rundowncloud.rs  spout.rs  status.rs
src/adapters/: broadcastAutomation.ts  contracts.ts  httpDataConnector.ts  sidecarAssetTransport.ts  sqliteStudioRepository.ts  tauriRenderTransport.ts
src/app/: layout.tsx
src/ar-asset-builder/: constants.ts  export.ts  factory.ts  layers.ts  placement.ts  schema.ts  sessionStore.ts  types.ts  useArAssetBuilder.ts
src/ar-asset-builder/imageProcessing/: backgroundRemovalAdapter.ts  chromaKey.ts  import.ts  providers.ts
src/ar-asset-builder/presets/: election.ts  index.ts  sports.ts  weather.ts
src/ar-engine/: arMotionEngine.ts  arPrep.ts  builderDrag.ts  builderKit.ts  nodeUtils.ts  starterLibrary.ts  templates.ts  types.ts  validation.ts  visibility.ts
src/ar-engine/sportsPanels/: glbExport.ts  index.ts  specs.ts  (+2 more)
src/ar-system/: index.ts  propertyRegistry.ts
src/broadcast/: broadcastStore.ts  constants.ts  index.ts  obsSetup.ts  obsWebSocket.ts  vmixClient.ts
src/companion-module/: README.md  index.js  package.json
src/document/: aiSettings.ts  arFocus.ts  automation.ts  bindings.ts  cameraMoves.ts  controlBridge.ts  controlProtocol.ts  dataPages.ts  dataSources.ts  dragAsset.ts  editorSessionStore.ts  externalConnector.ts  factory.ts  fonts.ts  gestureHistory.ts  liveShowStore.ts  mos.ts  ndiDiscovery.ts  persistence.ts  playbackState.ts  playout.ts  programState.ts  qualityTiers.ts  renderEnvelope.ts  rundowncloud.ts  schema.ts  sequence.ts  store.ts  ticker.ts  timelineEngine.ts  types.ts  useDocumentEnvelope.ts  useExternalDataPoller.ts  userTemplates.ts  workspace.ts
src/genres/: faith.ts  genreKit.ts  index.ts  politics.ts  program.ts  weather.ts
src/graphics/: brandingKit.ts  maps.ts  motionKit.ts  shapes.ts
src/lib/: chromaKeyShared.ts  db.ts
src/output/: rendererBenchmark.ts  useOutputStatus.ts
src/sets/: curvedPanoramicStudio.ts  lightingPresets.ts  modernStadiumGlassStudio.ts  studioSets.ts  universalWideStudio.ts
src/shims/: modules.d.ts  three.ts
src/sports/: CONVENTIONS.md  baseball.ts  basketball.ts  common.ts  football.ts  fullscreens.ts  hockey.ts  liveData.ts  lowerThirds.ts  rugby.ts  scorebug.ts  scorebugModern.ts  soccer.ts  sportsConnector.ts  squads.ts  tennis.ts  types.ts  volleyball.ts
src/views/: ControlRoomView.tsx  PreviewView.tsx  ProgramView.tsx
(+117 files in other folders)
